Add Single Point Chart Page - Call Px API from JS

--- a/SummerSunMVC/Views/Points/Index.cshtml
+++ b/SummerSunMVC/Views/Points/Index.cshtml
@@ -21,7 +21,7 @@
 }
 
 <div>
-    @Html.Partial("PointStatusPartial", Model.PointsStatus)
+    @Html.Partial("PointStatusPartial", Model)
 </div>
 
 @section scripts {
