--- a/SummerSunMVC/Views/Shared/_Layout.cshtml
+++ b/SummerSunMVC/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Hierarchical", "Index", "Equipment")</li>
                     <li>@Html.ActionLink("Multi Customers", "Index", "MultiCompany")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
