--- a/SummerSunMVC/Views/Points/Details.cshtml
+++ b/SummerSunMVC/Views/Points/Details.cshtml
@@ -1,10 +1,10 @@
-﻿@model SummerSunMVC.Models.PointStatus
+﻿@model SummerSunMVC.Models.PointViewModel
 
 @{
     ViewBag.Title = "PointDetailView";
 }
 <br />
-<p> Maybe a D3.JS chart ?... Let's start with Highchart</p>
+<p> Maybe a D3.JS chart ? Let's start with Highchart. Wait a couple of seconds...</p>
 
 <div id="chartContainer" style="width:100%; height:400px;"></div>
 <input type="hidden" value="@ViewBag.AccessToken" id="AccessToken" />
